--- a/ImpactMap/Views/Home/About.cshtml
+++ b/ImpactMap/Views/Home/About.cshtml
@@ -12,7 +12,7 @@
 @section Scripts {
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB4VlRpvKNloHrCwtMLKy_X2UQVhW_8L5Q&callback=initialize">
 </script>
-<script src="~/Scripts/googlemaps.js"></script>
+<script src="~/Scripts/googlemapsNEW.js"></script>
 
 <script>    
 initialize();
