--- a/ImpactMap/Views/Investments/Index.cshtml
+++ b/ImpactMap/Views/Investments/Index.cshtml
@@ -33,6 +33,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.categories)
             </th>
+            <th>
+
+            </th>
 
         </tr>
 
@@ -81,7 +84,7 @@
 </table>
 
 <div>
-    @Html.ActionLink("Back to Dashboard", "Index", "Dashboard")
+    @Html.ActionLink("Dashboard", "Index", "Dashboard")
 </div>
 
     </div>
