--- a/ImpactMap/Views/Categories/Create.cshtml
+++ b/ImpactMap/Views/Categories/Create.cshtml
@@ -36,7 +36,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" class="button" />
             </div>
         </div>
 
@@ -44,7 +44,7 @@
 }
 
 <div class="addpadding">
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Dashboard", "Index", "Dashboard")
 </div>
 
 @section Scripts {
