--- a/ImpactMap/Views/Categories/Edit.cshtml
+++ b/ImpactMap/Views/Categories/Edit.cshtml
@@ -23,9 +23,15 @@
                 @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
             </div>
         </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Save" class="button" />
+            </div>
+        </div>
     </div>
 }
 
 <div class="addpadding">
-    <input type="submit" value="Save" class="button" /> | @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Dashboard", "Index", "Dashboard")
 </div>
