--- a/ImpactMap/Views/Investments/Create.cshtml
+++ b/ImpactMap/Views/Investments/Create.cshtml
@@ -102,7 +102,7 @@
         
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" class="button" />
             </div>
         </div>
         <br />
@@ -110,9 +110,8 @@
 }
 
 
-<div>
-    @Html.ActionLink("Back to Dashboard", "Index", "Dashboard", new { @class = "button" });
-    <br />
+<div class="addpadding">
+    @Html.ActionLink("Investments List", "Index") | @Html.ActionLink("Dashboard", "Index", "Dashboard")
 </div>
 
 
