--- a/ImpactMap/Views/Projects/Create.cshtml
+++ b/ImpactMap/Views/Projects/Create.cshtml
@@ -33,12 +33,12 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" class="button" />
             </div>
         </div>
     </div>
 }
 
 <div class="addpadding">
-    @Html.ActionLink("Back to List", "Index") | @Html.ActionLink("Dashboard", "Index", "Dashboard")
+    @Html.ActionLink("Project List", "Index") | @Html.ActionLink("Dashboard", "Index", "Dashboard")
 </div>
