some entity edit changes, save button doesn't work

--- a/ImpactMap/Views/Entities/Edit.cshtml
+++ b/ImpactMap/Views/Entities/Edit.cshtml
@@ -73,7 +73,13 @@
         </div>
     </div>
 }
-    <input type="submit" value="Save" class="button addpadding" />
+<div class="form-group">
+    <div class="col-md-offset-2 col-md-10">
+        <input type="submit" value="Save" class="button" />
+    </div>
+</div>
+
+
 <div class="addpadding">
     @Html.ActionLink("Project List", "Index") | @Html.ActionLink("Dashboard", "Index", "Dashboard")
 </div>
