--- a/ImpactMap/Views/Categories/Create.cshtml
+++ b/ImpactMap/Views/Categories/Create.cshtml
@@ -27,7 +27,7 @@
             <div class="col-md-10">
                 <div id="displayMetrics">
                 </div>
-                @*<label>Enter Metric</label>*@
+                <label>Enter Metric</label>
                 <input type="text" id="metrics" /> <i class="fa fa-plus-circle" aria-hidden="true" id="addMetric"></i><br>
                 <input name="newMetrics" id="newMetrics" type="hidden" />
             </div>
