--- a/ImpactMap/Views/Categories/Delete.cshtml
+++ b/ImpactMap/Views/Categories/Delete.cshtml
@@ -27,7 +27,7 @@
             @{ 
                 foreach (var metric in Model.metrics)
                 {
-                    @metric.name
+                    <span class="metricName">@metric.name</span>
                 }
             }
             
