--- a/ImpactMap/Views/Entities/Create.cshtml
+++ b/ImpactMap/Views/Entities/Create.cshtml
@@ -69,6 +69,16 @@
                 @Html.EditorFor(model => model.description, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.description, "", new { @class = "text-danger" })
             </div>
+            
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.logoURL, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.logoURL, new { htmlAttributes = new { @type="file", @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.logoURL, "", new { @class = "text-danger" })
+            </div>
+
         </div>
 
         <div class="form-group">
