Categories/Index On Dash, InvesmentsIndex shows only investments from current user, Investment Details displays tags

--- a/ImpactMap/Content/Site.css
+++ b/ImpactMap/Content/Site.css
@@ -28,11 +28,11 @@ a href{
     height:50px;
 }
 
-.metricName:after {
+.metricName:after, .commaList:after {
     content: ",";
 }
 
-.metricName:after {
+.metricName:after, .comma:last-of-type:after {
     content: "";
 }
 
