--- a/ImpactMap/Views/Dashboard/Index.cshtml
+++ b/ImpactMap/Views/Dashboard/Index.cshtml
@@ -41,7 +41,10 @@
                     {
                         <tr>
                             <td>
-                                Html.DisplayFor(modelItem => category.name)
+                                @Html.DisplayFor(modelItem => category.name)
+                            </td>
+                            <td>
+
                             </td>
                         </tr>
 
