--- a/ImpactMap/Views/Investments/Create.cshtml
+++ b/ImpactMap/Views/Investments/Create.cshtml
@@ -96,7 +96,7 @@
             @Html.LabelFor(model => model.Investment.description, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Investment.description, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Investment.date, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.Investment.description, "", new { @class = "text-danger" })
             </div>
         </div>
         
