--- a/ImpactMap/Views/Investments/Edit.cshtml
+++ b/ImpactMap/Views/Investments/Edit.cshtml
@@ -66,11 +66,19 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group hideFormField" id="VolunteerContainer">
             @Html.LabelFor(model => model.volunteerHours, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.volunteerHours, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.volunteerHours, new { htmlAttributes = new { @type = "number", @step = "1", @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.volunteerHours, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.description, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.description, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.description, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -88,3 +96,33 @@
 <div class="addpadding">
     @Html.ActionLink("Investments List", "Index") | @Html.ActionLink("Dashboard", "Index", "Dashboard")
 </div>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+
+    <script>
+
+        //Cause the Volunteer Hours input box to show if In Kind checkbox is checked
+        function addVolunteerHours() {
+            $('#isInKind').click(function () {
+                if ($('#VolunteerContainer').hasClass('hideFormField')) {
+                    $('#VolunteerContainer').removeClass('hideFormField')
+                    $('#VolunteerContainer').addClass('showFormField')
+                }
+                else {
+                    $('#VolunteerContainer').removeClass('showFormField')
+                    $('#VolunteerContainer').addClass('hideFormField')
+                }
+            });
+        }
+
+        function initialize() {
+            addVolunteerHours();
+        }
+
+        $(initialize);
+
+        </script>
+    }
+
+
