--- a/ImpactMap/Views/Investments/Index.cshtml
+++ b/ImpactMap/Views/Investments/Index.cshtml
@@ -81,7 +81,8 @@
                     </ul>
                 </td>
                 <td>
-                    @Html.ActionLink("Details", "Details", new { id=item.ID })
+                    @Html.ActionLink("Details", "Details", new { id=item.ID }) |
+                    @Html.ActionLink("Edit", "Edit", new { id = item.ID })
                 </td>
             </tr>
         }
