--- a/ImpactMap/Views/Shared/_Layout.cshtml
+++ b/ImpactMap/Views/Shared/_Layout.cshtml
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/Content/images/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="/Content/images/favicons/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="/Content/images/favicons/favicon-16x16.png" sizes="16x16">
-    <link rel="manifest" href="/Content/images/favicons/manifest.json">
-    <link rel="mask-icon" href="/Content/images/favicons/safari-pinned-tab.svg" color="#5bbad5">
-    <link rel="shortcut icon" href="/Content/images/favicons/favicon.ico">
-    <meta name="msapplication-config" content="/Content/images/favicons/browserconfig.xml">
+    <link rel="apple-touch-icon" sizes="180x180" href="~/Content/Images/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="~/Content/Images/favicons/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="~/Content/Images/favicons/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="~/Content/Images/favicons/manifest.json">
+    <link rel="mask-icon" href="~/Content/Images/favicons/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="~/Content/Images/favicons/favicon.ico">
+    <meta name="msapplication-config" content="~/Content/Images/favicons/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
 
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
@@ -24,12 +24,18 @@
     <div class="header">
         <div class="container">            
             <div class="navbar-header">
-                <img src="~/Content/Images/impact_map.png" style="display:inline-block; max-height:10%; max-width:10%;" />
+               
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
+
+                <div class="navbar-brand">
+                    <img src="~/Content/Images/impact_map.png" style="display:inline-block; max-height:10%; max-width:10%;" />
+                    <h1>ImpactMap</h1>
+                </div>
+
 @*<<<<<<< HEAD
                 @Html.ActionLink("ImpactMap", "Index", "Dashboard", new { area = "" }, new { @class = "navbar-brand" })
             </div>
@@ -38,13 +44,14 @@
                     <li>@Html.ActionLink("Dashboard", "Index", "Dashboard")</li>
                 </ul>
 =======*@
-            </div>
+            
             <div class="navbar-collapse collapse">
 
                 @Html.Partial("_LoginPartial")
             </div>
         </div>
     </div>
+        </div>
     <div class="body-content">
         @RenderBody()
     </div>
