pre-merge commit

--- a/ImpactMap/Content/Site.css
+++ b/ImpactMap/Content/Site.css
@@ -119,7 +119,7 @@ a href{
 		text-align: center;
 		background-color: #92C337;
 		padding: 15px;
-        height:175px;
+        /*height:175px;*/
 	}
 
 	.footerText {
