--- a/ImpactMap/Views/Shared/_Layout.cshtml
+++ b/ImpactMap/Views/Shared/_Layout.cshtml
@@ -60,23 +60,25 @@
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
     <footer>
-        <div class="row">
-            <!--<div class="col-md-4">
+        <div class="container">
+            <div class="row">
+                <!--<div class="col-md-4">
             </div>-->
 
-            <div class="col-md-6 col-md-offset-4">
-                <br>
-                <img class="img-responsive" src="~/Content/Images/NeighborhoodAllies_textonly.svg" />
-                <br>
-            </div>
-
-            <div class="col-md-2">
-                <div style="text-align: center;">
+                <div class="col-md-6 col-md-offset-4">
                     <br>
-                    <p class="footerText">
-                        Software created by
-                    </p>
-                    <img class="academylogo" src="~/Content/Images/Academy_pgh.png" />
+                    <img class="img-responsive" src="~/Content/Images/NeighborhoodAllies_textonly.svg" />
+                    <br>
+                </div>
+
+                <div class="col-md-2">
+                    <div style="text-align: center;">
+                        <br>
+                        <p class="footerText">
+                            Software created by
+                        </p>
+                        <img class="academylogo" src="~/Content/Images/Academy_pgh.png" />
+                    </div>
                 </div>
             </div>
         </div>
